Fixes form validation error not showing

--- a/src/app/styles/_forms.scss
+++ b/src/app/styles/_forms.scss
@@ -74,19 +74,28 @@
             appearance: none;
         }
         &.is--invalid {
-            border-color: #e63757;
+            border-color: $color_warning;
             &:focus {
                 box-shadow: 0 0 0 0.15rem rgba(230, 55, 87, 0.25);
             }
             ~ .form-check-label {
-                color: #e63757;
+                color: $color_warning;
             }
         }
         &-icon {
             position: absolute;
-            top: 50%;
-            left: calc(100% - 3rem);
+            top: 55%;
+            left: calc(100% - 1.2rem);
             transform: translate(-50%, -50%);
+            opacity: 1;
+            transition: opacity .18s ease-out;
+            &.is--hidden {
+                opacity: 0;
+            }
+
+            &.password {
+                cursor: pointer;
+            }
         }
     }
     &-group {
@@ -164,8 +173,8 @@
             display: none;
             width: 100%;
             margin-top: 0.25rem;
-            font-size: 0.8125rem;
-            color: #e63757;
+            @include typography;
+            color: $color_warning;
         }
         &-tooltip {
             position: absolute;
@@ -179,7 +188,7 @@
             font-size: 0.8125rem;
             line-height: 1.5;
             color: #fff;
-            background-color: #e63757;
+            background-color: $color_warning;
             border-radius: 0.375rem;
         }
     }
@@ -200,10 +209,10 @@
     display: block;
 }
 .was-validated .form-control:invalid {
-    border-color: #e63757;
+    border-color: $color_warning;
 }
 .was-validated .form-check-input:invalid ~ .form-check-label {
-    color: #e63757;
+    color: $color_warning;
 }
 .was-validated .form-check-input:invalid ~ .form-invalid-feedback,
 .was-validated .form-check-input:invalid ~ .form-invalid-tooltip {
